fixed alignments

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -29,6 +29,10 @@
 	width: $default-width;
 }
 
+.wp-block-image .aligncenter {
+	width: auto;
+}
+
 img.aligncenter,
 img.alignnone,
 img.alignfull,
